--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class ="login">
+<% if current_user %>
+  Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+<% else %>
+  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
   <%= render 'layouts/top_nav' %>
-
+</div>
   <main class="container">
     <%= yield %>
   </main>
